# trainviz

./: .gitignore  404.html  MANIFEST.in  README.md  example.py  index.html  mkdocs.yml  pyproject.toml  search.html  setup.sh  sitemap.xml
.github/workflow/: publish_to_pypi.yml
.github/workflows/: docs.yml  publish_to_pypi.yml
api/: index.html
contributing/: index.html
docs/: api.md  index.md  installation.md
installation/: index.html
license/: index.html
search/: search_index.json
trainlytics/: app.py  server.py  state.py
trainlytics/web/: index.html
